# finance

./: .env.example  .gitignore  Makefile  README.md  commbank.py  etf_config.json  main.py  pyproject.toml  todo.md
.claude/commands/: finance.md
api/: main.py
finance/: api.py  dataloader_commbank.py  db.py  etf_analysis.py  formatter.py  llm.py  up_client.py  up_models.py  up_sync.py
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css
ui/src/components/: AccountOverview.jsx  DailySpendingChart.jsx  ETFAnalysis.jsx  FinancialCalendar.jsx  MerchantCategoryManager.jsx  MerchantChart.jsx  MerchantCounts.jsx  MonthlySpending.jsx  RawTransactions.jsx  RecentTransaction.jsx  RecurringTransactions.jsx  SavingsChart.jsx  SpendingBreakdown.jsx  SpendingTimeline.jsx  SubscriptionTracker.jsx  UpDashboard.jsx
ui/src/services/: api.js
ui/src/styles/: FinancialCalendar.css  RawTransactions.css
ui/src/utils/: formatters.js
